grafana/ingress_gatewayistio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: grafana-gateway
  namespace: default
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 8080
        name: grafana
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grafana
  namespace: default
spec:
  hosts:
    - "*"
  gateways:
    - grafana-gateway
  http:
    - route:
        - destination:
            host: prometheus-grafana
            port:
              number: 3000
